kubernetes/cluster0/apps/default/nginx-test/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: nginx-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
